add attribute distribution for events
